--- a/ETF_Model_2_Trend,_LightGBM.ipynb
+++ b/ETF_Model_2_Trend,_LightGBM.ipynb
@@ -15,7 +15,7 @@
         "id": "tJgmGpSZQ4Qr"
       },
       "source": [
-        "A notebook demonstrating the use of K-means correlation clustering (HRP was experimented with but resulting clusters were not intuitive) to select features that characterise most risks. In this demonstration, the model was trained on data sourced from AlphaVantage and saved to flat files. Unfortunately the original data is no longer available.\n",
+        "A notebook demonstrating the use of K-means correlation clustering (HRP was experimented with but resulting clusters were not intuitive) to select features that characterise most risks and then use them for a rolling validation of LightGB. In this demonstration, the model was trained on data sourced from AlphaVantage and saved to flat files. Unfortunately the original data is no longer available.\n",
         "\n",
         "This is the training notebook for the trend component of ETF returns using LightGBM, several models have been used to forecast the noise component and I hope to load these in the near future."
       ]
